--- a/hugo_source/layouts/partials/head.html
+++ b/hugo_source/layouts/partials/head.html
@@ -44,7 +44,7 @@
   <script src="{{ .Site.BaseURL }}plugins/jquery/jquery-ui.js"></script>
 
   {{ "<!--Favicon-->" | safeHTML }}
-  <link rel="icon" href="{{ .Site.BaseURL }}images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="{{ .Site.BaseURL }}plugins/images/favicon.ico" type="image/x-icon">
 
 </head>
 
