--- a/hugo_source/assets/css/style.css
+++ b/hugo_source/assets/css/style.css
@@ -132,10 +132,15 @@ body {
   justify-content: center;
 }
 
-ol,
-ul {
-  list-style-type: none;
+ol {
+  list-style-type: decimal;
   margin: 0px;
+}
+
+ul { 
+list-style-type: none; 
+margin: 0px;
+font-size: 16px;
 }
 
 img {
